# cargo-seal

./: .env.example  .gitignore  README.md  alembic.ini  manage.py  pyproject.toml  requirements.txt
alembic/: env.py
api/: parsers.py  serializers.py  urls.py  views.py
app/: constants.py  crud.py  database.py  deps.py  main.py  models.py  schemas.py
app/routers/: coverage.py  documents.py  merge.py  policies.py  shipments.py  vessels.py
app/scripts/: load_documents.py  load_fixtures.py
app/services/: coverage.py  declaration.py  excel_processors.py  excel_reader.py  file_loader.py  index_transformer.py  loaders.py  normalizers.py  port_patchers.py  summary_preprocessor.py  validators.py  vessel_check.py
app/tasks/: celery_app.py
app/utils/: coverage_transform.py  data_transform.py  fuzzy_matcher.py  loading.py  text.py
config/: column_map.json  columns.yaml  config.yaml  excel_config.toml
core/: constants.py  models.py  services.py  validators.py
core/management/commands/: dump_shipments_uuids.py  generic_command.py  (+10 more)
coverage/: models.py  validators.py
data/: columns.json
logistics/: models.py
marine_cargo/: asgi.py  settings.py  urls.py  wsgi.py
marine_cargo/utils/: abstract_loader.py
procurement/: models.py
pydantic_models/: extractors.py  logistics.py  shared.py  shipment_builders.py  utils.py  vessels.py
scripts/: Push-Coverage-Form.ps1  push_coverage_form.sh  run_migrations.sh
templates/: index.html  missing_sheets.html  shipment_result.html  test-upload.html
tests/: test_declaration.py  test_main.py
vessels/: models.py
(+10 files in other folders)
