[project]
name = "cargo-seal"
version = "0.1.0"
description = "Marine cargo insurance tracking system with vessel and shipment declaration support."
authors = [{ name = "Your Name", email = "your@email.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "sqlalchemy",
    "alembic",
    "python-multipart",
    "jinja2",
    "openpyxl",
    "pandas"
]

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88

[tool.mypy]
plugins = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
